--- a/react-cli/src/components/index/guest/home/postContainer/postContainer.css
+++ b/react-cli/src/components/index/guest/home/postContainer/postContainer.css
@@ -6,4 +6,17 @@
     gap: 20px;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: center;
+    margin-left: 400px;
+}
+
+.post_body{
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    height: 80%;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
 }
