--- a/react-cli/src/components/index/departement/createAnnonce/createAnnonce.css
+++ b/react-cli/src/components/index/departement/createAnnonce/createAnnonce.css
@@ -17,3 +17,25 @@
     margin-top: 40px;
     margin-left: 200px;
 }
+
+.annonce{
+    width: 400px;
+    height: 600px;
+    box-shadow: 0 0.0625rem 0.1875rem rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05) 0 1.25rem 1.5625rem -0.3125rem, rgba(0, 0, 0, 0.04) 0 0.625rem 0.625rem -0.3125rem;
+    border-radius: 0.25rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.annonce .field{
+    width: 80%;
+}
+
+.annonce select{
+    width: 350px;
+}
+
+.annonce .button{
+    margin-left: 210px;
+}
