--- a/react-cli/src/components/index/departement/departement.css
+++ b/react-cli/src/components/index/departement/departement.css
@@ -4,3 +4,11 @@
     width: 100%;
     height: 100vh;
 }
+
+.outlet-container{
+    width: 85%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
