--- a/react-cli/src/components/index/departement/include/sidebar.css
+++ b/react-cli/src/components/index/departement/include/sidebar.css
@@ -1,4 +1,4 @@
-.departement-sidebar{
+.departement-sidebar {
     height: 100vh;
     width: 15%;
     display: flex;
@@ -8,13 +8,37 @@
     align-items: center;
 }
 
-.logo{
+.logo {
     width: 100%;
     height: 10%;
     font-size: 2em;
     text-align: center;
     padding-top: 10px;
     font-weight: bold;
-    color: rgb(34,38, 49);
+    color: rgb(34, 38, 49);
 }
 
+.departement-sidebar ul {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+
+    align-items: center;
+    
+    width: 100%;
+    gap: 5px;
+}
+.departement-sidebar li{
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    border-radius: 25px;
+    cursor: pointer;
+}
+
+.departement-sidebar li:hover{
+    background-color: rgb(34, 38, 49);
+    color: aliceblue;
+}
